--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,61 +6,6 @@
     margin: 0;
 }
 
-.normal{
-    background-color: #A8A878
-}
-.fighting{
-    background-color: #C03028
-}
-.flying{
-    background-color: #A890F0
-}
-.poison{
-    background-color: #A040A0
-}
-.ground{
-    background-color: #E0C068
-}
-.rock{
-    background-color: #B8A038
-}
-.bug{
-    background-color: #A8B820
-}
-.ghost{
-    background-color: #705898
-}
-.steel{
-    background-color: #B8B8D0
-}
-.fire{
-    background-color: #F08030
-}
-.water{
-    background-color: #6890F0
-}
-.grass{
-    background-color: #78C850
-}
-.electric{
-    background-color: #F8D030
-}
-.psychic{
-    background-color: #F85888
-}
-.ice{
-    background-color: #98D8D8
-}
-.dragon{
-    background-color: #7038F8
-}
-.dark{
-    background-color: #705848
-}
-.fairy{
-    background-color: #EE99AC
-}
-
 .pokemon{
     margin: 0.5rem;
     padding: .5rem .5rem;
@@ -74,13 +19,15 @@
     text-transform: capitalize;
     color:white;
     margin-bottom: 0;
+    font-size: large;
 }
 
 .pokemon .number{
     color: black;
     text-align: right;
-    opacity: .3;
+    opacity: .5;
     font-size: small;
+    font-weight: bold;
 }
 
 .pokemon .types{
@@ -101,7 +48,7 @@
     color:white;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: x-small;
+    font-size: 8.5pt;
     /* font-size: .625rem; */
     border-radius: 1rem;
     filter:brightness(1.09);
